# NIA

./: .gitignore  nia_ls_result.tsv  nia_ls_result_aligned.txt  optimathsat_result.tsv  run_convert_data_parallel.sh  summarize_results.sh  z3_result.tsv
bound_tightening_results/: summary.tsv
bound_tightening_results/benchmarks/QF_NIA/AProVE/: aproveSMT1151853695059846557@2.txt  aproveSMT1163698168838677581@3.txt  aproveSMT1167329477969666320@2.txt  aproveSMT1187219829289257398@0.txt  aproveSMT1209827521045967401@2.txt  aproveSMT1214014197073442925@4.txt  aproveSMT1223215467645905128@3.txt  aproveSMT1290350034702307057@3.txt  aproveSMT1302492464160038682@2.txt  (+34 more)
branch1/: nia_ls.cpp
branch2/: nia_ls.cpp
branch3/: nia_ls.cpp  nia_ls.h
branch3_results/: method.txt
feasible_objective_improvement/: nia_ls.cpp
feasible_objective_improvement_results/: summary.tsv
master/: main.cpp  nia_ls.h
nia_ls/: CMakeLists.txt
nia_ls/src/: main.cpp  nia_Array.h  nia_build_instance.cpp  nia_initialize.cpp  nia_ls.cpp  nia_ls.h  nia_print.cpp
objective_aware_move_selection/: nia_initialize.cpp  nia_ls.cpp
objective_aware_move_selection_results/: method.txt  summary.tsv
objective_bound_tightening/: main.cpp  nia_ls.cpp  nia_ls.h
objective_bound_tightening_results/: method.txt
scripts/python/: ensure_optimizaiton.py  run_optimathsat_with_progress.py  run_z3_with_progress.py  summarize_optimathsat_results.py  summarize_z3_results.py  tongji_NIA_optimathsat.py  tongji_NIA_z3.py
scripts/shell/: run_optimathsat.sh  run_solver.sh  run_z3.sh
(+20537 files in other folders)
